# parallel_lessons

./: CMakeLists.txt  main.cpp
src/: fibonacci.cpp  functions.cpp  integrate_cpp.cpp  integrate_omp.cpp  randomizer.cpp  reduction.cpp  threads_num.cpp  types.h
